# WyckoffTransformer

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CITATION.cff  README.md  WyCryst_vs_WyckoffTransformer.ipynb  conftest.py  data.py  hatch_build.py  poetry.lock.zeus  pyproject.toml  pyproject.toml.zeus  uv.toml.cpu  uv.toml.local
.github/workflows/: pytest.yml  python-app.yml  python-publish.yml
CRP/: sweep_510qkcxc.sh  sweep_fdocos15.sh  sweep_lrop5hpj_10.sh  sweep_sqs1zyl6.sh  sweep_y0gtylov.sh  train.sh  train_band_gap.sh  train_energy.sh  train_energy_matbench_dicovery_mp_2022.sh  train_pilot_cpu.sh  train_pilot_cuda.sh
CRP/templates/: train.sh.template
CRP/train/matbench_discovery_mp_2022/: augmented_harmonic_no_dropout.sh
CRP/train/mp_20/NextToken/: augmented_harmonic_no_dropout.sh  cluster_harmonic.sh
CRP/train/mp_20/letter_vs_ss/: energy_letter_dropout.sh  energy_ss_harmonic_no_dropout.sh
ICML_eval/: Al2Fe3(SiO4)3.cif  DFT_eval.ipynb  LLM_vs_WT.ipynb  MP_20_biternary.ipynb  MP_20_paper_eval.ipynb  README.md  almandine.ipynb  mpts_52.ipynb  pyxtal_time.ipynb  rare_sg.ipynb  space_group_plot.ipynb  tokenization_discussion.ipynb  tokenization_discussion_anon.ipynb  tokenization_discussion_mpts.ipynb  uniqueness.ipynb
ICML_eval/tables/: cdvae_metrics_no_relax_table.csv  mp_20_biternary_paper_summary_table.csv  mp_20_biternary_paper_summary_table.pkl  mp_20_biternary_summary_similarity_raw.tex  mp_20_biternary_summary_symmetry_raw.tex
cdvae_property_models/: .gitignore  NOTICE  README.md  pyproject.toml
cdvae_property_models/src/cdvae_property_models/: __init__.py  prop_eval.py
cdvae_property_models/src/cdvae_property_models/common/: constants.py  data_utils.py
cdvae_property_models/src/cdvae_property_models/pl_data/: datamodule.py  dataset.py
cdvae_property_models/src/cdvae_property_models/pl_modules/: decoder.py  model.py
cdvae_property_models/src/cdvae_property_models/pl_modules/gemnet/: gemnet.py
cdvae_property_models/src/cdvae_property_models/prop_models/carbon/: hparams.yaml
cdvae_property_models/src/cdvae_property_models/prop_models/mp20/: hparams.yaml
cdvae_property_models/src/cdvae_property_models/prop_models/perovskite/: hparams.yaml
cdvae_property_models/tests/: test_weights_only_loading.py
data/: README
data/alex_mp_20/: README
docker/: Dockerfile  build.sh  docker_run_inference.sh  docker_run_training.sh
evaluation/: generated_dataset.py  novelty.py  statistical_evaluator.py
research_notebooks/: .gitignore  Draw structures.ipynb  E_hull_CHGNet.ipynb  MP_20_export.ipynb  MP_20_full_eval.ipynb  NeurIPS-2024-eval.ipynb  battery_export.ipynb  carbon_24.ipynb  cdvae_metrics.ipynb  cdvae_metrics.json  check_new_weights.ipynb  check_template_novelty.ipynb  cluster_generation.ipynb  comp_validity.ipynb  diffcsp_reseach.ipynb  export_cif_folder.ipynb  generation_investigation.ipynb  mp_2022_plot.ipynb  mp_20_compare.ipynb  mptrj_duplicates.ipynb  notebook-radar.ipynb  permutations_likelihood.ipynb  perov_5.ipynb  relaxation_symmetry.ipynb  symmetry_research.ipynb  symmetry_test.py
scripts/: DiffCSP_to_sites.py  cache_a_dataset.py  cache_generated_datasets.py  compute_e_hull.py  compute_test_losss.py  create_pilot_dataset.py  cryspr_chgnet.py  cryspr_orb.py  cryspr_orb_correction.py  cryspr_pyxtal_chgnet.py  cryspr_pyxtal_mace.py  cryspr_pyxtal_orb.py  cryspr_pyxtal_orb_correction.py  data.py  generate.py  generate_reference.py  predict.py  prepare_cif.py  prepare_pyxtal_inputs.py  preprocess_wychoffs.py  process_lemat.py  process_lemat_symmetry.py  push_to_hub.py  sample_structures_for_dft.py  tokenise_a_dataset.py  train.py  wandb_agent.py  zeus_env_init.sh
scripts/data_preprocesssing/: DiffCSP_orig_convert.ipynb  SymmCD_filter_invalid.ipynb  export_generated_data.ipynb  generated_housekeeping.py  mptrj_extract_all.ipynb
src/tests/: test_weights_only_loading.py
src/wyckoff_transformer/: .gitignore  data.py  generator.py  preprocess_wychoffs.py  tokenization.py  trainer.py  wyckoff_processor.py
src/wyckoff_transformer/cascade/: dataset.py  model.py
src/wyckoff_transformer/cascade/tests/: test_cascade_data.py
src/wyckoff_transformer/cdvae_evals/: __init__.py
src/wyckoff_transformer/cdvae_evals/pl_data/: datamodule.py
src/wyckoff_transformer/cli/: generate.py  relax.py
src/wyckoff_transformer/cli/tests/: test_generate.py  test_relax.py
src/wyckoff_transformer/cryspr/: __init__.py  calculator.py  generator.py  relaxer.py
src/wyckoff_transformer/cryspr/tests/: test_cryspr.py  test_mace_relaxation.py
src/wyckoff_transformer/evaluation/: DiffCSP_to_sites.py  __init__.py  cdvae_metrics.py  core.py  generated_dataset.py  novelty.py  statistical_evaluator.py
src/wyckoff_transformer/tests/: test_adaln_conditioning.py  test_calibrate_empty_tail.py  test_cdvae_property_model_loading.py  test_generator.py  test_generator_cache.py  test_tokenization.py  test_trainer.py  test_trainer_cache.py
src/wyckoff_transformer/tests/data/: tokenization_subsample.json
src/wyckoff_transformer/tests/fixtures/: ioi8tycx_reference_metrics.json
tests/: test_weights_only_loading.py
wyckoff_transformer/: evaluation.py  generator.py  tokenization.py  trainer.py
wyckoff_transformer/tests/: test_tokenization.py
yamls/models/: README.md  base_sg_kappa.yaml  base_sg_kappa_batch.yaml  base_sg_kappa_batch_schedule_free.yaml
yamls/models/alex_mp_20/: base_sg_schedulefree.yaml  ehull_schedulefree.yaml
yamls/models/lemat_14/: base_sg_batch_schedule_free.yaml  base_sg_schedule_free.yaml
yamls/models/lemat_62/: base_sg_batch_schedule_free.yaml  base_sg_schedule_free.yaml  wandb_yppqodyk.yaml
yamls/models/matbench_discovery_mp_2022/: augmented_harmonic_no_dropout.yaml
yamls/tokenisers/: alex_mp_20_sg_multiplicity.yaml  alex_mp_20_sg_multiplicity_energy.yaml  apdb_sg_multiplicity_scalars.yaml  lemat_14_sg_multiplicity.yaml  lemat_62_sg_multiplicity.yaml  lemat_mp20cfg_sg_multiplicity.yaml  mp_20_sg_multiplicity_int16.yaml  mp_20_sg_multiplicity_ssops.yaml  sg_binary_classification.yaml
(+17 files in other folders)
