[project]
name = "wyckoff-transformer"
version = "1.0.0"
description = "Wyckoff Transformer: Generation of Symmetric Crystals; ICML 2025"
authors = [{ name = "Nikita Kazeev", email = "kazeevn@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
  "ipykernel >=6.25.2",
  "pandas >=2.1.1",
  "numpy >=1.26.0, <2",
  "ase >=3.22.1",
  "nglview >=3.0.8",
  "wandb >=0.16.0",
  "py3dmol >=2.0.4",
  "scikit-learn >=1.5.0",
  "filelock >=3.14.0",
  "omegaconf >=2.3.0",
  "smact >=2.5.5",
  "wrapt-timeout-decorator >=1.5.1",
  "ipywidgets >=8.1.3",
  "jupyter >=1.0.0",
  "hydra-core >=1.3.2",
  "matminer >=0.10.0",
  "p-tqdm >=1.4.2",
  "python-dotenv >=1.0.1",
  "lightning >=2.4.0",
  "cython <3.0.0",
  "pytorch-lightning >=2.4.0",
  "torch ==2.10.0",
  "matbench-discovery >=1.3.1",
  "pandarallel >=1.6.5",
  "schedulefree >=1.4.1",
  "ipympl >=0.9.7",
  "pymatgen ==2025.10.7",
  "monty >=2025.3.3",
  "pyxtal >=1.1.3",
  "pydantic >=2.12.5",
  "huggingface-hub>=1.7.2",
]

[project.optional-dependencies]
dev = ["pytest >=9.0.2"]
cdvae = ["cdvae-property-models"]
cdvae-cpu = ["cdvae-property-models[cpu]"]
cdvae-cu128 = ["cdvae-property-models[cu128]"]
cpu = ["torch"]
cu128 = ["torch"]

[build-system]
requires = ["hatchling", "pyxtal>=1.1.3", "numpy>=1.26.0,<2", "scipy", "scikit-learn>=1.5.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wyckoff_transformer", "scripts"]

[tool.hatch.build.hooks.custom]

[tool.hatch.build]
include = [
  "yamls/**/*",
  "src/wyckoff_transformer/wyckoffs_enumerated_by_ss.json",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
conflicts = [
  [{ extra = "cu128" }, { extra = "cpu" }],
  [{ extra = "cdvae-cu128" }, { extra = "cdvae-cpu" }],
  [{ extra = "cdvae-cu128" }, { extra = "cpu" }],
  [{ extra = "cdvae-cpu" }, { extra = "cu128" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
cdvae-property-models = { path = "cdvae_property_models" }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

# In the ideal world, we would forget about these packages
# However, if cdvaae-property-models are installed, they try drag
# torch-scatter and torch-sparse with them, and uv fails because it can't build them here
[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[tool.pytest.ini_options]
testpaths = ["src"]
markers = [
  "needs_cache: mark test as requiring the cache file data.pkl.gz",
]
filterwarnings = [
  "ignore:`torch\\.jit\\.script` is deprecated\\..*:DeprecationWarning:torch\\.jit\\._script",
]
