[project]
name = "wyckoff-transformer"
version = "1.0.3"
description = "Wyckoff Transformer is a machine learning model for generating crystal structures which are symmetric by design."
authors = [{ name = "Nikita Kazeev", email = "kazeevn@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "pandas >=2.1.1",
  "numpy >=1.26.0",
  "wandb >=0.25.0",
  "scikit-learn >=1.5.0",
  "omegaconf >=2.3.0",
  "smact >=2.5.5",
  "wrapt-timeout-decorator >=1.5.1",
  "torch ==2.10.0",
  "pandarallel >=1.6.5",
  "schedulefree >=1.4.1",
  "ipympl >=0.9.7",
  "pymatgen ==2025.10.7",
  "monty >=2025.3.3",
  "pyxtal ~=1.1",
  "pydantic >=2.12.5",
  "huggingface-hub>=1.7.2",
  "matminer"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/SymmetryAdvantage/WyckoffTransformer"
Issues = "https://github.com/SymmetryAdvantage/WyckoffTransformer/issues"

[project.scripts]
wyformer-generate = "wyckoff_transformer.cli.generate:main"

[project.optional-dependencies]
dev = ["pytest >=9.0.2", "ruff >=0.15.0"]
cdvae = ["cdvae-property-models"]
publish = ["build", "twine", "packaging >=25"]
research = ["ase", "matbench-discovery", "ipykernel", "ipywidgets", "jupyter", "ipympl"]

[build-system]
requires = ["hatchling", "pyxtal>=1.1.3", "numpy>=1.26.0,<2", "scipy", "scikit-learn>=1.5.0", "pydantic", "pandas"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wyckoff_transformer", "scripts"]

[tool.hatch.build.hooks.custom]

[tool.hatch.build]
ignore-vcs = true
include = [
  "src/wyckoff_transformer/**/*.py",
  "scripts/**/*.py",
  "yamls/**/*",
  "src/wyckoff_transformer/wyckoffs_enumerated_by_ss.json",
  "src/wyckoff_transformer/engineers/*.json",
]

[tool.uv.sources]
cdvae-property-models = { path = "cdvae_property_models" }

# In the ideal world, we would forget about these packages
# However, if cdvaae-property-models are requested, they drag
# torch-scatter and torch-sparse with them, and uv fails because it can't build them here
[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[tool.pytest.ini_options]
testpaths = ["src"]
markers = [
  "needs_cache: mark test as requiring the cache file data.pkl.gz",
]
filterwarnings = [
  "ignore:`torch\\.jit\\.script` is deprecated\\..*:DeprecationWarning:torch\\.jit\\._script",
]
