[project]
name = "cdvae-property-models"
version = "1.0.0"
description = "CDVAE property model evaluation for crystal structures"
requires-python = ">=3.12, <3.13"
dependencies = [
  "numpy >=1.26.0, <2",
  "torch ==2.10.0",
  "torch-scatter ==2.1.2",
  "torch-sparse ==0.6.18",
  "torch-geometric >=2.7.0",
  "pytorch-lightning >=2.4.0",
  "lightning >=2.4.0",
  "hydra-core >=1.3.2",
  "omegaconf >=2.3.0",
  "pymatgen ==2025.10.7",
  "pyxtal >=1.1.3",
  "scikit-learn >=1.5.0",
  "p-tqdm >=1.4.2",
]

[project.optional-dependencies]
cpu = ["torch", "torch-scatter", "torch-sparse"]
cu128 = ["torch", "torch-scatter", "torch-sparse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdvae_property_models"]

[tool.hatch.build]
include = [
  "src/cdvae_property_models/prop_models/**/*",
  "src/cdvae_property_models/pl_modules/gemnet/gemnet-dT.json",
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
conflicts = [[{ extra = "cu128" }, { extra = "cpu" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pyg-cpu"
url = "https://data.pyg.org/whl/torch-2.10.0+cpu.html"
explicit = true
format = "flat"

[[tool.uv.index]]
name = "pyg-cu128"
url = "https://data.pyg.org/whl/torch-2.10.0+cu128.html"
explicit = true
format = "flat"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

torch-scatter = [
  { index = "pyg-cpu", extra = "cpu" },
  { index = "pyg-cu128", extra = "cu128" },
]

torch-sparse = [
  { index = "pyg-cpu", extra = "cpu" },
  { index = "pyg-cu128", extra = "cu128" },
]
